fix(rca): multi-provider fallback hierarchy, adaptive structured outputs, resilient field aliasing, and fix cache poisoning